--- a/compose.yml
+++ b/compose.yml
@@ -11,8 +11,11 @@ services:
       - ${STRFRY_DB}/whitelisted:/app/strfry-db
       - /usr/share/zoneinfo/Asia/Tokyo:/etc/localtime:ro
     environment:
-      - RESOURCE_DIR
+      - FOLLOW_CHECK_API_BASE_URL
     pid: host
+    depends_on:
+      whitelisted_follow_check_api:
+        condition: service_healthy
     networks:
       - nostr_relays
     restart: unless-stopped
@@ -34,14 +37,41 @@ services:
       - ${STRFRY_DB}/whitelisted:/app/strfry-db
       - /usr/share/zoneinfo/Asia/Tokyo:/etc/localtime:ro
     environment:
-      - RESOURCE_DIR
+      - FOLLOW_CHECK_API_BASE_URL
     pid: host
+    depends_on:
+      whitelisted_follow_check_api:
+        condition: service_healthy
     restart: unless-stopped
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "20"
+
+  whitelisted_follow_check_api:
+    build:
+      context: ./whitelisted/follow_check_api
+      dockerfile: ./Dockerfile
+    container_name: whitelisted_follow_check_api
+    ports:
+      - 127.0.0.1:8080:8080
+    volumes:
+      - ./resource:${RESOURCE_DIR}
+    environment:
+      - TZ=Asia/Tokyo
+    healthcheck:
+      test: "wget --quiet --spider http://localhost:8080/health || exit 1"
+      start_period: 10s
+      interval: 30s
+      timeout: 3s
+      retries: 2
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
 
   jp_relay:
     image: pluja/strfry:0.9.6
