--- a/compose.yml
+++ b/compose.yml
@@ -97,7 +97,7 @@ services:
       - nostr_relays
     restart: unless-stopped
     healthcheck:
-      test: "wget --quiet --spider http://localhost:7777 || exit 1"
+      test: "wget --quiet --spider http://127.0.0.1:7777 || exit 1"
       interval: 5s
       timeout: 3s
       start_period: 5s
